Markets, Rel Ext, About

--- a/journal/201901.md
+++ b/journal/201901.md
@@ -273,75 +273,58 @@ Huge debate about importance of building Reddit community [here](https://www.red
 
 ## Markets
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
-
-ICO projects withdrew ~441k ETH from treasuries, which can impact the whole market https://www.circle.com/en/research/recap-dec28-jan3
+In January DCR was trading between USD 15.5-19.5 / BTC 0.00435-0.00487. The average daily rate was $17.1.
 
 ## Relevant External
 
-{PoW, ASIC resistance, tech}
+Ethereum Classic (ETC) was subject to a 51% attack, with the alert being raised by [CoinNess](https://www.coinness.com/news/198264) on Jan 7. Coinbase then [announced](https://blog.coinbase.com/ethereum-classic-etc-is-currently-being-51-attacked-33be13ce32de) that it had detected a deep reorganization of the ETC chain and had halted ETC transactions. The article lists a number of reorgs that involved double spends, putting the total amount involved at $1.1 million, across 15 distinct reorg events. Coinbase was not itself a target for these attacks. The Gate.io exchange subsequently [announced](https://www.gate.io/article/16735) that it had been targeted and had lost around $200K, and that it would absorb the loss. Gate.io also significantly increased the number of confirmations required for ETC deposits. In an unusual development, the attacker then [returned](https://www.gate.io/article/16740) $100K of the ETC to Gate.io, they have tried but failed to make contact with the attacker and do not know the reason for the return of funds. Other victims of the ETC double spends have not come forward. 
 
-Ethereum Classic (ETC) was subject to a 51% attack, with the alert being raised by [CoinNess](https://www.coinness.com/news/198264) on Jan 7.  Coinbase then [announced](https://blog.coinbase.com/ethereum-classic-etc-is-currently-being-51-attacked-33be13ce32de) that it had detected a deep reorganization of the ETC chain and had halted ETC transactions. The article lists a number of reorgs that involved double spends, putting the total amount involved at $1.1 million, across 15 distinct reorg events. Coinbase was not itself a target for these attacks. The Gate.io exchange subsequently [announced](https://www.gate.io/article/16735) that it had been targeted and had lost around $200k, and that it would absorb the loss. Gate.io also significantly increased the number of confirmations required for ETC deposits. In an unusual development, the attacker then [returned](https://www.gate.io/article/16740) $100k of the ETC to gate.io, they have tried but failed to make contact with the attacker and do not know the reason for the return of funds. Other victims of the ETC double spends have not come forward. 
-
-Ethereum's developers [decided](https://www.coindesk.com/ethereum-developers-give-tentative-greenlight-to-asic-blocking-code) (tentatively)  on Jan 4 to go ahead with a change of mining algorithm from Ethash to ProgPoW. This move is intended to stop ASICs from mining Ethereum.
+Ethereum's developers [decided](https://www.coindesk.com/ethereum-developers-give-tentative-greenlight-to-asic-blocking-code) (tentatively) on Jan 4 to go ahead with a change of mining algorithm from Ethash to ProgPoW. This move is intended to stop ASICs from mining Ethereum. The Block [outlined](https://www.theblockcrypto.com/2019/01/11/despite-core-dev-consensus-proposition-progpow-faces-community-concerns/) concerns like reduced attack cost after the switch, weaker incentives of GPU miners, transfer of power from Bitmain and Innosilicon to AMD and Nvidia, and a possible chain split. They concluded that the debate around the algorithm switch will be a good test for Ethereum's governance process.
 
 Ethereum developers also [delayed](https://breakermag.com/what-we-know-about-the-vulnerability-behind-ethereums-rollback-of-constantinople/) the Constantinople hard fork on Jan 15 after a security vulnerability which would have enabled a "reentrancy attack" was [detected](https://medium.com/chainsecurity/constantinople-enables-new-reentrancy-attack-ace4088297d9). 
 
-Fundamentals of Proof of Work [article](https://blog.sia.tech/fundamentals-of-proof-of-work-beaa68093d2b) by David Vorick makes the case for exclusive hardware cryptocurrencies and contrasts them with shared hardware cryptocurrencies that suffer from multiple issues, especially ASIC-resistant ones. One of the issues with non specialized hardware is hashrate marketplaces. They allow hardware owners to better profit from their hardware by not caring about which coin they mine, even if the hashrate is rented to attackers. Decred benefits from specialized hardware but is not "exclusive" to it, other coins exist or may appear in future that use the same mining algorithm. What protects Decred is the (current) hashrate dominance for its algorithm and the ability to strip mining rewards from the blocks.
+Fundamentals of Proof of Work [article](https://blog.sia.tech/fundamentals-of-proof-of-work-beaa68093d2b) by David Vorick makes the case for exclusive hardware cryptocurrencies and contrasts them with shared hardware cryptocurrencies that suffer from multiple issues, especially those pursuing ASIC resistantce. One of the issues with non specialized hardware is hashrate marketplaces. They allow hardware owners to get more profit by not caring about which coin they mine, even if the hashrate is rented to attackers. Decred benefits from specialized hardware but is not "exclusive" to it, other coins exist or may appear in future that use the same mining algorithm. What protects Decred is the (current) hashrate dominance for its algorithm and ultimately, the PoS layer capable of stripping mining rewards from the blocks.
 
-The first round of Aragon proposal voting [concluded](https://blog.aragon.org/final-results-from-aragon-network-vote-1/) on Jan 26. Of the 12 submitted proposals, 3 were excluded from the vote by the Aragon Foundation (1 because of lack of full time leadership and engineering talent, 2 were excluded to reduce cognitive load on voters). 8 of the 9 proposals voted on were [approved](https://mainnet.aragon.org/#/governance.aragonproject.eth/0x277bfcf7c2e162cb1ac3e9ae228a3132a75f83d4) by ANT holders, with one proposal (to change the voting period duration from 48 hours to 1 week) rejected. ANT participation rates [ranged](https://mainnet.aragon.org/#/governance.aragonproject.eth/0x277bfcf7c2e162cb1ac3e9ae228a3132a75f83d4) from 2.3 to 7.8%. The most expensive [proposal](https://github.com/aragon/flock/blob/master/teams/Aragon%20One/2019.md) to be approved will pay Aragon One $4 million for 2019 operating costs plus an incentive package consisting of 1.675 million ANT on a 5 year vesting schedule. An incentive in ANT with a vesting schedule was included as part of most proposals, in addition to the main cost to be paid in DAI. In total this round of approved proposals will cost around $5.94 million + 2.52 million ANT (~$880k).
+The first round of Aragon proposal voting [concluded](https://blog.aragon.org/final-results-from-aragon-network-vote-1/) on Jan 26. Of the 12 submitted proposals, 3 were excluded from the vote by the Aragon Foundation (1 because of lack of full time leadership and engineering talent, 2 were excluded to reduce cognitive load on voters). 8 of the 9 proposals voted on were [approved](https://mainnet.aragon.org/#/governance.aragonproject.eth/0x277bfcf7c2e162cb1ac3e9ae228a3132a75f83d4) by ANT holders, with one proposal (to change the voting period duration from 48 hours to 1 week) rejected. ANT participation rates [ranged](https://mainnet.aragon.org/#/governance.aragonproject.eth/0x277bfcf7c2e162cb1ac3e9ae228a3132a75f83d4) from 2.3 to 7.8%. The most expensive [proposal](https://github.com/aragon/flock/blob/master/teams/Aragon%20One/2019.md) to be approved will pay Aragon One $4 million for 2019 operating costs plus an incentive package consisting of 1.675 million ANT on a 5 year vesting schedule. An incentive in ANT with a vesting schedule was included as part of most proposals, in addition to the main cost to be paid in DAI. In total this round of approved proposals will cost around $5.94 million + 2.52 million ANT (~$880K).
 
 The EOS referendum system for constitutional amendments went [live](https://medium.com/@eosnationbp/the-fate-of-eos-is-in-the-hands-of-token-holders-3d345147ef6) on Jan 11. So far 77 proposals have been [submitted](https://bloks.io/vote/referendums). The voting period for these proposals is flexible and specified by the submitter, some last as long as four months. The proposals with the most votes (as of Jan 31) have votes from around 2% of circulating EOS, but most proposals have very low participation (only 10 have greater than 0.5% participation). So far the most popular proposals are to [change](https://bloks.io/vote/referendums/rex4all) where the fees for short names and RAM purchases go, [delete](https://bloks.io/vote/referendums/decaf) the EOS Core Arbitration Forum, and [burn](https://bloks.io/vote/referendums/burnsaving) the inflation funds in eosio.saving (to be used for funding the worker proposal system).
 
-The NEM Foundation [announced](https://forum.nem.io/t/nem-foundation-message-to-the-community/21753) that it is in financial difficulty and needs to downsize its workforce. A new council took over the foundation on January 1 and when they opened the books they saw a problem. The previous council had a burn rate of 9 million XEM per month ($360k now, considerably more at the time) which was spent by independent regional entities on promotional activities with little accountability. This was deemed not sustainable, and the new council has restructured the foundation and is presently seeking additional funds.
-
-{governance, forks, chain splits, controversy}
+The NEM Foundation [announced](https://forum.nem.io/t/nem-foundation-message-to-the-community/21753) that it is in financial difficulty and needs to downsize its workforce. A new council took over the foundation on Jan 1 and when they opened the books they saw a problem. The previous council had a burn rate of 9 million XEM per month ($360K now, considerably more at the time) which was spent by independent regional entities on promotional activities with little accountability. This was deemed not sustainable, and the new council has restructured the foundation and is presently seeking additional funds.
 
 Updated version of the "forkonomy" research by Wassim Alsindi (@parallelind) was [published](https://hackernoon.com/towards-an-analytical-discipline-of-forkonomy-summer-2018-e6da993ee3f9) along with an up-to-date [follow-up](https://medium.com/@parallelind/forkonomy-revisited-where-are-they-now-73fbfbec6b4d).
 
-Hcash forked a few [more](https://archive.today/rEhWX) Decred projects: [Autonomy](https://archive.today/KTCdX) (Politeia), [hcexplorer](https://archive.today/2KTtW) and [hctime](https://archive.today/K151A). In Politeia, they accidentally [removed](https://archive.today/ECplt) copyright of Decred developers and forgot to rename the project. After being notified they quickly reacted by removing multiple repositories from TKFORKED account,  [reinstating](https://github.com/TKFORKED/autonomy/commit/4b05c2c31829df64be69e546d939a563247e1927) the license and [renaming](https://github.com/TKFORKED/autonomy/commit/98d5f63f676e45e6a91eba99da3db985effdb1f2) the Politeia fork to Autonomy. A few [missed](https://twitter.com/michae2xl/status/1084270468234915840) subtle Decred icons were fixed. Some [projects](https://archive.today/https://github.com/HcashOrg/hc*) were forked with their commit history erased and without marking them as forks on GitHub. Complaints on their subreddit were silently censored without reply ([1](https://www.reddit.com/r/hcash/comments/adwmx2/hcash_being_shady_again/), [2](https://www.reddit.com/r/hcash/comments/afepsc/hcash_cant_be_bothered_to_change_the_decred_logo/). Discussed [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154696507010921TRgid:decred.org).
+Hcash forked a few [more](https://archive.today/rEhWX) Decred projects: [Autonomy](https://archive.today/KTCdX) (Politeia), [hcexplorer](https://archive.today/2KTtW) and [hctime](https://archive.today/K151A). In Politeia, they accidentally [removed](https://archive.today/ECplt) copyright of Decred developers and forgot to rename the project. After being notified they quickly reacted by removing multiple repositories, [reinstating](https://github.com/TKFORKED/autonomy/commit/4b05c2c31829df64be69e546d939a563247e1927) the license and [renaming](https://github.com/TKFORKED/autonomy/commit/98d5f63f676e45e6a91eba99da3db985effdb1f2) the Politeia fork to Autonomy. A few [missed](https://twitter.com/michae2xl/status/1084270468234915840) subtle Decred icons were fixed. Some [projects](https://archive.today/https://github.com/HcashOrg/hc*) were forked with their commit history erased and without marking them as forks on GitHub. Complaints ([1](https://www.reddit.com/r/hcash/comments/adwmx2/hcash_being_shady_again/), [2](https://www.reddit.com/r/hcash/comments/afepsc/hcash_cant_be_bothered_to_change_the_decred_logo/)) on their subreddit were silently [censored](https://archive.today/Edy7T) with no reply. Oh, and [r/hcash](https://archive.today/Edy7T) styles look [familiar](https://archive.today/e1rAw). Discussed [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154696507010921TRgid:decred.org).
 
-Grin [struggles](https://www.grin-forum.org/t/solved-early-disappointments/3682) to get funding.
+A [sad example](https://twitter.com/BrianDColwell/status/1090286752831434752) of what can happen when the team runs out of money.
 
-Another [sad example](https://twitter.com/BrianDColwell/status/1090286752831434752) of what can happen when the team runs out of money.
+ICO projects [withdrew](https://diar.co/ethereum-ico-treasury-balances/) ~441K ETH ($52.5M as of Feb 9) from treasuries in December 2018.
 
-{DEX}
-
-{related exchanges and websites}
-
-[Staked](https://staked.us/about/), a startup that provides staking services for institutional investors, raised $4.5M from Pantera, Coinbase, DCG and others. Covered by [CoinDesk](https://www.coindesk.com/pantera-coinbase-join-4-5-million-round-in-staking-as-a-service-startup), [The Block](https://www.theblockcrypto.com/2019/01/31/winklevoss-twins-pantera-get-behind-a-new-business-thats-capitalizing-on-a-new-trend-sweeping-crypto-hedge-funds/) and [Bloomberg](https://www.bloomberg.com/news/articles/2019-02-01/some-crypto-investors-are-playing-it-safe-after-volatile-run). Staked operates a [VSP](https://decred.staked.us/) that launched in Nov 2018.
+[Staked](https://staked.us/about/), a startup that provides staking services for institutional investors, raised $4.5M from Pantera, Coinbase, DCG and others. Covered by [CoinDesk](https://www.coindesk.com/pantera-coinbase-join-4-5-million-round-in-staking-as-a-service-startup), [The Block](https://www.theblockcrypto.com/2019/01/31/winklevoss-twins-pantera-get-behind-a-new-business-thats-capitalizing-on-a-new-trend-sweeping-crypto-hedge-funds/) and [Bloomberg](https://www.bloomberg.com/news/articles/2019-02-01/some-crypto-investors-are-playing-it-safe-after-volatile-run). Staked operates a Decred [VSP](https://decred.staked.us/) that launched in Nov 2018.
 
 Binance now [allows](https://support.binance.com/hc/en-us/articles/360022498052) to buy crypto with Visa and MasterCard (and the list of [restrictions](https://support.binance.com/hc/en-us/articles/360022204152) tells something about fiat).
 
-Coinbase [banned](https://cryptocoinspy.com/coinbase-bans-gab-again/). Good reminder of the old but still very relevant mantra: "not your keys not your coins". This is [not the first](https://www.cnbc.com/2018/04/23/coinbase-suspends-wikileaks-bitcoin-account.html) big case of account suspension.
+Coinbase [banned](https://cryptocoinspy.com/coinbase-bans-gab-again/) accounts of social media platform Gab. This is [not the first](https://www.cnbc.com/2018/04/23/coinbase-suspends-wikileaks-bitcoin-account.html) big case of account suspension by the exchange.
 
-Medium censored an article 'How to use Bitcoin anonymously' https://bitcoinist.com/how-to-use-bitcoin-anonymously-ban-medium/
-
-{other: regulations, security, fun}
-
-Hacked addresses. {impact?}
-
-* https://eprint.iacr.org/2019/023
-* https://cryptoslate.com/researchers-discover-vulnerability-bitcoin-ethereum-ripple-digital-signatures/
-* {ask devs to comment, e.g. how bad can it be if user has a poor source of random on his device}
-* some speculate Copay is involved https://www.reddit.com/r/Bitcoin/comments/aectx5/nadiaheninger_and_joachim_breitner_discoverer/edpedar/
-
-Largest data breach in history contains a collection of thousands of hacked databases https://www.troyhunt.com/the-773-million-record-collection-1-data-reach/ . Choose wisely who you share data with.
+Medium [censored](https://bitcoinist.com/how-to-use-bitcoin-anonymously-ban-medium/) an article "How to use Bitcoin anonymously" which spurred discussion and an [issue](https://github.com/xaur/decred-issues/issues/70) about migrating from it, or at least treating it as one of multiple mirrors of content. Backup your Medium posts, just in case.
 
 Bank for International Settlements released a very optimistic [study](https://www.bis.org/publ/work765.htm) of cryptocurrencies.
 
+[Vulnerability](https://cryptoslate.com/researchers-discover-vulnerability-bitcoin-ethereum-ripple-digital-signatures/) was discovered in digital signatures of Bitcoin and a few other systems. A tiny set of signatures was generated using an incorrect implementation of signature algorithm which can be used to reveal private keys. Only few thousand signatures were vulnerable out of nearly a billion Bitcoin signatures examined. According to researchers, the vast majority of cryptocurrency users need not worry.
+
+Largest [data breach](https://www.troyhunt.com/the-773-million-record-collection-1-data-reach/) in history contains a collection of thousands of hacked databases. Choose wisely who you share data with.
+
 Cryptopia was [hacked](https://www.investinblockchain.com/cryptopia-hack-estimated-16-million-lost/) with loss estimates varying between $3-16 million. Binance [froze](https://www.investinblockchain.com/binance-freezes-funds-cryptopia-hack/) some funds coming from the hack.
 
-https://www.zdnet.com/article/new-ransomware-strain-is-locking-up-bitcoin-mining-rigs-in-china/
+New wave of hAnt infections (first seen in August) was [reported](https://www.zdnet.com/article/new-ransomware-strain-is-locking-up-bitcoin-mining-rigs-in-china/) targeting Bitcoin mining rigs. The ransomware demands to infect 1,000 other devices or pay 10 BTC, else it threatens to burn the rig. There was no reports of destroyed equipment.
 
-Resource exhaustion vulnerability was [discovered](https://medium.com/@dsl_uiuc/fake-stake-attacks-on-chain-based-proof-of-stake-cryptocurrencies-b8b05723f806) 26+ currencies based on PoSv3, majority of them deployed mitigations. Part of the root cause is that in many such systems the Proof of Stake layer was "grafted in" Bitcoin Core codebase insecurely. Decred is [not affected](https://twitter.com/Sanket1729/status/1087829688347701254).
+Resource exhaustion vulnerability known as Fake Stake attack was [discovered](https://medium.com/@dsl_uiuc/fake-stake-attacks-on-chain-based-proof-of-stake-cryptocurrencies-b8b05723f806) 26+ currencies based on PoSv3, majority of them deployed mitigations. Part of the root cause is that in many such systems the Proof of Stake layer was "grafted in" Bitcoin Core codebase insecurely. One of report's authors tweeted that Decred is [not affected](https://twitter.com/Sanket1729/status/1087829688347701254).
 
 ## About This Issue
 
-This is the {}th issue of Decred Journal. It is available on [GitHub]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the 10th issue of Decred Journal. Index of all issues, mirrors and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): {}, {} and {}.
+Credits (alphabetical order): bee, davecgh, degeri, Dustorf, guang, Haon, jholdstock, liz_bagot, lukebp, matheusd, richardred, zubairzia0.
