--- a/journal/201901.md
+++ b/journal/201901.md
@@ -64,7 +64,7 @@ Other:
 * [SQL interface](https://www.reddit.com/r/decred/comments/agpkjv/sql_interface_to_live_onchain_decred_data/) to Decred on-chain data might be interesting to researchers.
 * GitHub now [allows](https://github.blog/2019-01-07-new-year-new-github/) private repositories with up to 3 collaborators for free accounts.
 
-Dev activity stats for January: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
+Dev activity stats for January: 242 active PRs, 243 master commits, 60K added and 47K deleted lines spread across 8 repositories. Contributions came from 2-8 developers per repository.
 
 ## People
 
