--- a/journal/201901.md
+++ b/journal/201901.md
@@ -17,7 +17,7 @@ Node and wallet software v1.4.0 was released. Full release notes and downloads a
 
 The release brings significant improvements, along with a proposed change to the consensus rules which fixes a bug with the Lightning Network support. Node operators are advised to upgrade to help the network reach the upgrade threshold. Once upgraded, voters should set their [voting preferences](https://docs.decred.org/governance/how-to-vote/). Upgrade progress can be tracked at [voting.decred.org](https://voting.decred.org/).
 
-For technical details of the consensus change see [DCP0004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) and a [blog post](https://matheusd.com/post/dcp0004-and-hardforks/) by @matheusd.
+For technical details of the consensus change see [DCP0004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) and a [post](https://matheusd.com/post/dcp0004-and-hardforks/) by @matheusd.
 
 Except for the vote agenda, v1.4.0 final has no other significant changes since Release Candidate 2 which was covered in [December](https://xaur.github.io/decred-news/journal/201812.html).
 
@@ -25,7 +25,7 @@ Except for the vote agenda, v1.4.0 final has no other significant changes since 
 
 [dcrd](https://github.com/decred/dcrd): An [issue](https://github.com/decred/dcrd/issues/1568) was discovered in v1.4.0 RC1. The large change to UTXO set semantics accidentally fixed a bug in consensus rules. Old incorrect behavior was [preserved](https://github.com/decred/dcrd/pull/1570) until a consensus vote can take place to correct it. Thanks to everybody who helped to discover and fix the bug in the release candidate.
 
-The code for the consensus vote is [completed](https://github.com/decred/dcrd/pull/1579) and included in the final [v1.4.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). The fix and vote was prioritized because it is required for Lightning Network. [DCP004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) (Decred Change Proposal) explains the change in detail and reminds of useful applications of relative locks beyond LN. Additional [post](https://matheusd.com/post/dcp0004-and-hardforks/) by @matheusd covers the origins of the bugs and measures to prevent similar bugs in the future - [refactoring](https://github.com/decred/dcrd/pull/1583) and reinforcement of tests in that area.
+The code for the consensus vote is [completed](https://github.com/decred/dcrd/pull/1579) and included in the final [v1.4.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). The fix and vote was prioritized because it is required for Lightning Network. [DCP004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) (Decred Change Proposal) explains the change in detail and reminds of useful applications of relative locks beyond LN. Additional [post](https://matheusd.com/post/dcp0004-and-hardforks/) by @matheusd covers the origins of the bug and measures to prevent similar bugs in the future - [refactoring](https://github.com/decred/dcrd/pull/1583) and reinforcement of tests in that area.
 
 Discussion [started](https://github.com/decred/dcrd/issues/1593) how to further improve stake difficulty algorithm by removing oscillations - this could make ticket price even more smooth.
 
