--- a/journal/201901.md
+++ b/journal/201901.md
@@ -25,7 +25,7 @@ Except for the vote agenda, v1.4.0 final has no other significant changes since 
 
 [dcrd](https://github.com/decred/dcrd): An [issue](https://github.com/decred/dcrd/issues/1568) was discovered in v1.4.0 RC1. The large change to UTXO set semantics accidentally fixed a bug in consensus rules. Old incorrect behavior was [preserved](https://github.com/decred/dcrd/pull/1570) until a consensus vote can take place to correct it. Thanks to everybody who helped to discover and fix the bug in the release candidate.
 
-The code for the consensus vote is [completed](https://github.com/decred/dcrd/pull/1579) and included in the final [v1.4.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). The fix and vote was prioritized because it is required for Lightning Network. [DCP004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) (Decred Change Proposal) explains the change in detail and reminds of useful applications of relative locks beyond LN. Additional [post](https://matheusd.com/post/dcp0004-and-hardforks/) by @matheusd covers the origins of the bug and measures to prevent similar bugs in the future - [refactoring](https://github.com/decred/dcrd/pull/1583) and reinforcement of tests in that area.
+The code for the consensus vote is [completed](https://github.com/decred/dcrd/pull/1579) and included in the final [v1.4.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). The fix and vote was prioritized because it is required for Lightning Network. [DCP004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) (Decred Change Proposal) explains the change in detail and reminds of useful applications of relative locks beyond LN. Side effect of this work was [refactoring](https://github.com/decred/dcrd/pull/1583) and reinforcement of tests in that area. @matheusd has published a [blog post](https://matheusd.com/post/dcp0004-and-hardforks/) which gives an overview of the bug and how it was found and responded to.
 
 Discussion [started](https://github.com/decred/dcrd/issues/1593) how to further improve stake difficulty algorithm by removing oscillations - this could make ticket price even more smooth.
 
@@ -39,7 +39,7 @@ In development: Onboarding popup was [replaced](https://github.com/decred/polite
 
 Discussions:
 
-* Missing admin [feature](https://github.com/decred/politeia/issues/662) to censor public proposal was identified: there must be a way to remove a public proposal that was edited to include abusive content, alternatively admins need to review all edits manually.
+* Missing admin [feature](https://github.com/decred/politeia/issues/662) to censor public proposal was identified: there must be a way to remove a public proposal that was edited to include abusive content. Alternatively, admins would have to review all edits before they are shown on the proposals site.
 * [Automated end-to-end testing](https://github.com/decred/politeiagui/issues/976) and [QA checklist](https://github.com/decred/politeiagui/issues/977) for major changes.
 * Large frontend code [refactoring](https://github.com/decred/politeiagui/issues/990) to address complexity, performance and dev productivity issues. First proposed [solution](https://github.com/decred/politeiagui/issues/990#issuecomment-454535696) is to use GraphQL.
 
@@ -57,7 +57,7 @@ Dev side: @buck54321 is [destroying](https://github.com/decred/dcrdata/pull/915)
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): Internal code improvements, preliminary work for Decrediton integration. A [monitoring page](https://mainnet-split-tickets.matheusd.com/) was set up that shows active splitting sessions from all VSPs that support it.
 
-[docs](https://github.com/decred/dcrdocs): New pages: [Operating a VSP](https://docs.decred.org/advanced/operating-a-vsp/) outlines configuration requirements and desired skillset of VSP operators, [Solo PoS Voting](https://docs.decred.org/advanced/solo-proof-of-stake-voting/) brings the guide by @jz to all docs readers, [Address Details](https://docs.decred.org/advanced/address-details/) navigates all possible types of addresses, [Contributing to Decred](https://docs.decred.org/contributing/contributing-to-decred/) explains how to become a paid Decred contractor.
+[docs](https://github.com/decred/dcrdocs): New pages: [Operating a VSP](https://docs.decred.org/advanced/operating-a-vsp/) outlines configuration requirements and desired skillset of VSP operators, [Solo PoS Voting](https://docs.decred.org/advanced/solo-proof-of-stake-voting/) brings the guide by @jz to all docs readers, [Address Details](https://docs.decred.org/advanced/address-details/) describes all possible types of addresses, [Contributing to Decred](https://docs.decred.org/contributing/contributing-to-decred/) explains how to become a paid Decred contractor.
 
 Deep dive security discussion in #documentation concluded that it is possible to assemble general [computer security guidelines](https://github.com/xaur/decred-issues/issues/101) that will be beneficial for the whole space.
 
@@ -95,7 +95,7 @@ Independent Decred contractors [published](https://medium.com/decred/decred-inde
 
 In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 16,776 DCR and spent 9,991 DCR. Using January's daily average DCR/USD rate of $17.1, this is $286K received and $170K spent. As these payments were for work completed in December, it is also informative to consider them in the context of the December average daily rate of $17.5 - in which case the USD received/spent figures are $294K/$175K.
 
-Contractors are now [getting paid](https://docs.decred.org/contributing/contributor-compensation/) on ~15th of each month for the prior month's work. The delay between invoicing and getting paid was cut in half from ~30th day. Work is ongoing to further lower this delay.
+Contractors are now [getting paid](https://docs.decred.org/contributing/contributor-compensation/) on ~15th of each month for the prior month's work. The delay between invoicing and getting paid was cut in half from ~30th day. Work is ongoing to further decrease this delay.
 
 RFP: Decred Decentralized Exchange Infrastructure proposal was [submitted](https://proposals.decred.org/proposals/5431da8ff4eda8cdbf8f4f2e08566ffa573464b97ef6d6bae78e749f27800d3a) by @jy-p. It outlines motivation and high level design of the DEX first described in June [post](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/). The project is estimated to complete in less than 6 months with a budget between USD 100,000 and USD 1,000,000. Voting will happen in 2 phases: first will determine if stakeholders want this at all, and second to choose a specific team, budget and detailed plan to go forward. This process is known as [request for proposal](https://en.wikipedia.org/wiki/Request_for_proposal).
 
@@ -103,7 +103,7 @@ Decred Bug Bounty program [launched](https://twitter.com/decredproject/status/10
 
 @Dustorf is preparing proposals to improve transparency and increase stakeholder's control of the allocation of funds for the marketing activities. Events spending [pre-proposal](https://www.reddit.com/r/decred/comments/anhh8n/proposal_to_get_events_spending_approved_via/) was published for feedback on Reddit after first iteration [in chat](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org). Marketing budget pre-proposal also started [in chat](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154897255124536mFHoo:decred.org) and landed [on Reddit](https://www.reddit.com/r/decred/comments/aolr79/politeia_proposal_to_fund_marketing_ops_for_2019/) after a first round of feedback.
 
-@oregonisaac is [looking](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15474111512672Whvns:decred.org) for Java developers to evaluate requirements for ATM integration. Draft of the proposal was posted and discussed [in chat](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154828004015153jWdiD:decred.org). There was some concensus to use 2-phase RFP voting for this. Another good point discussed was whether to wait for mobile apps releases before proceeding with the ATMs.
+@oregonisaac is [looking](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15474111512672Whvns:decred.org) for Java developers to evaluate requirements for ATM integration. Draft of the proposal was posted and discussed [in chat](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154828004015153jWdiD:decred.org). There was some consensus to use 2-phase RFP voting. Another good point discussed was whether to wait for mobile apps releases before proceeding with the ATMs.
 
 Discussions:
 
@@ -288,7 +288,7 @@ Ethereum's developers [decided](https://www.coindesk.com/ethereum-developers-giv
 
 Ethereum developers also [delayed](https://breakermag.com/what-we-know-about-the-vulnerability-behind-ethereums-rollback-of-constantinople/) the Constantinople hard fork on Jan 15 after a security vulnerability which would have enabled a "reentrancy attack" was [detected](https://medium.com/chainsecurity/constantinople-enables-new-reentrancy-attack-ace4088297d9). 
 
-Fundamentals of Proof of Work [article](https://blog.sia.tech/fundamentals-of-proof-of-work-beaa68093d2b) by David Vorick makes the case for exclusive hardware cryptocurrencies and contrasts them with shared hardware cryptocurrencies that suffer from multiple issues, especially those pursuing ASIC resistantce. One of the issues with non specialized hardware is hashrate marketplaces. They allow hardware owners to get more profit by not caring about which coin they mine, even if the hashrate is rented to attackers. Decred benefits from specialized hardware but is not "exclusive" to it, other coins exist or may appear in future that use the same mining algorithm (Blake256r14). What protects Decred is the (current) hashrate dominance for its algorithm and ultimately, the PoS layer capable of stripping mining rewards from the blocks.
+Fundamentals of Proof of Work [article](https://blog.sia.tech/fundamentals-of-proof-of-work-beaa68093d2b) by David Vorick makes the case for exclusive hardware cryptocurrencies and contrasts them with shared hardware cryptocurrencies that suffer from multiple issues, especially those pursuing ASIC resistance. One of the issues with non specialized hardware is that the hardware's value is not closely related to the asset (because it can mine many other chains). Another issue is hashrate marketplaces, they allow hardware owners to get more profit by not caring about which coin they mine, even if the hashrate is rented to attackers. Decred benefits from specialized hardware and is by far the dominant coin for its algorithm (Blake256r14). Although this hardware cannot be considered "exclusive" to Decred, in addition to current hashrate dominance for its algorithm Decred has the PoS factor which is capable of denying rewards to misbehaving miners.
 
 The first round of Aragon proposal voting [concluded](https://blog.aragon.org/final-results-from-aragon-network-vote-1/) on Jan 26. Of the 12 submitted proposals, 3 were excluded from the vote by the Aragon Foundation (1 because of lack of full time leadership and engineering talent, 2 were excluded to reduce cognitive load on voters). 8 of the 9 proposals voted on were [approved](https://mainnet.aragon.org/#/governance.aragonproject.eth/0x277bfcf7c2e162cb1ac3e9ae228a3132a75f83d4) by ANT holders, with one proposal (to change the voting period duration from 48 hours to 1 week) rejected. ANT participation rates [ranged](https://mainnet.aragon.org/#/governance.aragonproject.eth/0x277bfcf7c2e162cb1ac3e9ae228a3132a75f83d4) from 2.3 to 7.8%. The most expensive [proposal](https://github.com/aragon/flock/blob/master/teams/Aragon%20One/2019.md) to be approved will pay Aragon One $4 million for 2019 operating costs plus an incentive package consisting of 1.675 million ANT on a 5 year vesting schedule. An incentive in ANT with a vesting schedule was included as part of most proposals, in addition to the main cost to be paid in DAI. In total this round of approved proposals will cost around $5.94 million + 2.52 million ANT (~$880K).
 
@@ -306,7 +306,7 @@ ICO projects [withdrew](https://diar.co/ethereum-ico-treasury-balances/) ~441K E
 
 [Staked](https://staked.us/about/), a startup that provides staking services for institutional investors, raised $4.5M from Pantera, Coinbase, DCG and others. Covered by [CoinDesk](https://www.coindesk.com/pantera-coinbase-join-4-5-million-round-in-staking-as-a-service-startup), [The Block](https://www.theblockcrypto.com/2019/01/31/winklevoss-twins-pantera-get-behind-a-new-business-thats-capitalizing-on-a-new-trend-sweeping-crypto-hedge-funds/) and [Bloomberg](https://www.bloomberg.com/news/articles/2019-02-01/some-crypto-investors-are-playing-it-safe-after-volatile-run). Staked operates a Decred [VSP](https://decred.staked.us/) since Nov 2018.
 
-Binance now [allows](https://support.binance.com/hc/en-us/articles/360022498052) to buy crypto with Visa and MasterCard (and the list of [restrictions](https://support.binance.com/hc/en-us/articles/360022204152) tells us something about fiat).
+Binance now [allows](https://support.binance.com/hc/en-us/articles/360022498052) one to buy crypto with Visa and MasterCard (and the list of [restrictions](https://support.binance.com/hc/en-us/articles/360022204152) tells us something about fiat).
 
 Coinbase [banned](https://cryptocoinspy.com/coinbase-bans-gab-again/) accounts of social media platform Gab. This is [not the first](https://www.cnbc.com/2018/04/23/coinbase-suspends-wikileaks-bitcoin-account.html) big case of account suspension by the exchange.
 
@@ -314,15 +314,15 @@ Medium [censored](https://bitcoinist.com/how-to-use-bitcoin-anonymously-ban-medi
 
 Bank for International Settlements released a very optimistic [study](https://www.bis.org/publ/work765.htm) of cryptocurrencies.
 
-[Vulnerability](https://cryptoslate.com/researchers-discover-vulnerability-bitcoin-ethereum-ripple-digital-signatures/) was discovered in digital signatures of Bitcoin and a few other systems. A tiny set of signatures was generated using an incorrect implementation of signature algorithm which can be used to reveal private keys. Only few thousand signatures were vulnerable out of nearly a billion Bitcoin signatures examined. According to researchers, the vast majority of cryptocurrency users need not worry.
+[Vulnerability](https://cryptoslate.com/researchers-discover-vulnerability-bitcoin-ethereum-ripple-digital-signatures/) was discovered in digital signatures of Bitcoin and a few other systems. A tiny set of signatures was generated using an incorrect implementation of signature algorithm which can be used to reveal private keys. Only a few thousand signatures were vulnerable out of nearly a billion Bitcoin signatures examined. According to researchers, the vast majority of cryptocurrency users need not worry.
 
 Largest [data breach](https://www.troyhunt.com/the-773-million-record-collection-1-data-reach/) in history contains a collection of thousands of hacked databases. Choose wisely who you share data with.
 
 Cryptopia was [hacked](https://www.investinblockchain.com/cryptopia-hack-estimated-16-million-lost/) with loss estimates varying between $3-16 million. Binance [froze](https://www.investinblockchain.com/binance-freezes-funds-cryptopia-hack/) some funds coming from the hack.
 
-New wave of hAnt infections (first seen in August) was [reported](https://www.zdnet.com/article/new-ransomware-strain-is-locking-up-bitcoin-mining-rigs-in-china/) targeting Bitcoin mining rigs. The ransomware demands to infect 1,000 other devices or pay 10 BTC, else it threatens to burn the rig. There was no reports of destroyed equipment.
+New wave of hAnt infections (first seen in August) was [reported](https://www.zdnet.com/article/new-ransomware-strain-is-locking-up-bitcoin-mining-rigs-in-china/) targeting Bitcoin mining rigs. The ransomware demands to infect 1,000 other devices or pay 10 BTC, else it threatens to burn the rig. There have been no reports of destroyed equipment so far.
 
-Resource exhaustion vulnerability known as Fake Stake attack was [discovered](https://medium.com/@dsl_uiuc/fake-stake-attacks-on-chain-based-proof-of-stake-cryptocurrencies-b8b05723f806) in 26+ blockchains based on PoSv3, majority of them deployed mitigations. Part of the root cause is that in many such systems the Proof of Stake layer was "grafted in" Bitcoin Core codebase insecurely. One of report's authors tweeted that Decred is [not affected](https://twitter.com/Sanket1729/status/1087829688347701254).
+Resource exhaustion vulnerability known as Fake Stake attack was [discovered](https://medium.com/@dsl_uiuc/fake-stake-attacks-on-chain-based-proof-of-stake-cryptocurrencies-b8b05723f806) in 26+ blockchains based on PoSv3, the majority of them deployed mitigations. Part of the root cause is that in many such systems the Proof of Stake layer was "grafted in" to the Bitcoin Core codebase insecurely. One of report's authors tweeted that Decred is [not affected](https://twitter.com/Sanket1729/status/1087829688347701254).
 
 ## About This Issue
 
